[package]
name = "simplewm"
version = "0.1.0"
edition = "2021"
author = "Liam Malone"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
x11 = "2.20.x"
xcb = { version= "1.2.x", features = ["xkb", "render", "xinerama", "randr"] }

[[bin]]
name = "simplewm"
path = "src/simplewm.rs"
